--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,101 @@
 body    {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
+.container  {
+    display: flex;
+    justify-content: space-evenly;
+    color: rgb(71, 69, 69);
+}
+
+.main-content  {
+    background-color: #FFF6F7;
+    width: 65vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.logo   {
+    margin-left: 3rem;
+    width: 10rem;
+    position: relative;
+    top: 7rem;
+    font-size: 4rem;
+}
+
+.logo a  {
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    text-decoration-color: #fd6e00;
+    color: black;
+}
+
+.content    {
+    position: relative;
+    top: 200px;
+    width: 700px;
+    margin-left: 300px;
+}
+
+.headline   {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    font-size: 2em;
+}
+
+.top-heading    {
+    color: #ce6829;
+}
+
+h1  {
+    margin-bottom: 10px;
+}
+.crosshead   {
+    color: #ce6829;
+}
+
+.email-input    {
+    width: 450px;
+    height: 70px;
+    font-size: 2em;
+    border-radius: 50px;
+    border: 3px solid #d4b3b7;
+    margin-bottom: 0px;
+}
+
+.email-input:focus  {
+    outline: none;
+}
+
+.submit-email-btn   {
+    position: absolute;
+    width: 123px;
+    height: 78px;
+    border-radius: 50px;
+    right: 191px;
+    border-color: rgb(212,178,199);
+    background: rgb(212,178,199);
+    background: linear-gradient(324deg, rgba(212,178,199,1) 28%, rgba(212,191,178,1) 58%);  
+    cursor: pointer;
+    color: #fff;
+    font-size: 30px;
+}
+
+.submit-email-btn:focus {
+    outline: none;
+}
+
+/* Image Styling */
+.model-image    {
+    display: flex;
+    width: 35vw;
+    height: 100vh;
+}
+
+img    {
+    height: 100%;
+    width: 100%;
+}    
