Max width 768px responsive design complete

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body    {
     color: rgb(71, 69, 69);
 }
 
+/* Main Content Styling */
 .main-content  {
     background-color: #FFF6F7;
     width: 65vw;
@@ -36,7 +37,7 @@ body    {
     position: relative;
     top: 200px;
     width: 700px;
-    margin-left: 300px;
+    margin-left: 30%;
 }
 
 .headline   {
@@ -99,3 +100,49 @@ img    {
     height: 100%;
     width: 100%;
 }    
+
+@media (max-width: 768px)   {
+    .container   {
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        height: 100%;
+    }
+    .model-image    {
+        order: 1;
+        display: flex;
+        width: 100vw;
+        height: 40%;
+    }
+
+    .main-content   {
+        order: 2;
+        display: flex;
+        width: 100vw;
+    }
+
+    .logo   {
+        margin-left: 20px;
+    }
+    
+    .content    {
+        width: 94vw;
+        margin-left: 20px;
+    }
+
+
+    .email-input    {
+        width: 300px;
+        height: 36px;
+        font-size: 20px;
+        font-family: 'Montserrat Alternates', sans-serif;
+    }
+
+    .submit-email-btn   {
+        right: 21px;
+        height: 43px;
+        width: 64px;
+        box-shadow: 2px 6px 17px rgb(212 178 199) ;
+    }
+
+}
