--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,34 @@ img    {
     }
 }
 
+/* Small Laptop */
+@media (max-width: 1024px)    {
+    .main-content    {
+        width: 55vw;
+    }
 
+    .crosshead  {
+        width: 60%;
+        font-size: 1.5em;
+    }
+
+    .model-image    {
+        width: 45vw;
+    }
+
+    .email-input    {
+        width: 400px;
+        height: 50px;
+        font-size: 20px;
+        font-family: 'Montserrat Alternates', sans-serif;
+    }
+    .submit-email-btn   {
+        right: 279px;
+        height: 58px;
+        width: 90px;
+        box-shadow: 2px 6px 17px rgb(212 178 199) ;
+    }
+}
 
 /* Tablet */
 @media (max-width: 768px)   {
